<resources>
    <string name="app_name">OrderingFoods</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">PhoneNumber</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="fullname">Fullname</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="already_haveAnAccount">Already have an account?</string>
    <string name="login">Login</string>
    <string name="ToLogin">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_Login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="ToRegister">Register</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="cus">Customer</string>
    <string name="name">Fullname</string>
    <string name="mail">Email</string>
    <string name="numberphone">Phone</string>
    <string name="employees">Employee</string>
    <string name="confirm">Confirm password</string>
    <string name="addr">Address</string>
    <string name="pwd">Password</string>
    <string name="signUp">Register</string>
    <string name="adm">Admin</string>
    <string name="haveAccount">Already have an Account?</string>
    <string name="SignIn">Login</string>
    <string name="fullName">Fullname</string>
    <string name="txtSetting">Account Settings</string>
    <string name="txtLogout">Logout</string>
    <string name="doing">TODO</string>
    <string name="caraman_invisible">Caraman Invisible</string>
    <string name="full_name">Name</string>
    <string name="hint_mickey">Mickey</string>
    <string name="address_i4">Address</string>
    <string name="email_i4">Email</string>
    <string name="phone_i4">Phone</string>
    <string name="edit_profile_i4">Edit Profile</string>
    <string name="change_password_i4">Change Password</string>
    <string name="backToHome">TODO</string>
    <string name="home_doing">TODO</string>
    <string name="favorite_doing">TODO</string>
    <string name="setting_doing">TODO</string>
    <string name="cart_doing">TODO</string>
    <string name="user_doing">TODO</string>
    <string name="back_home_page">backHomePage</string>
    <string name="close_login">TODO</string>
    <string name="close_login_page">TODO</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="back_to_login">Back to Login</string>
    <string name="close_forgot_password">TODO</string>
    <string name="change_pwd_title">Change Password</string>
    <string name="btn_change_password">Change Password</string>
    <string name="return_my_profile">Return my profile</string>
    <string name="old_password">Enter old password</string>
    <string name="new_password">Enter new password</string>
    <string name="re_new_password">Enter confirm password</string>
</resources>