<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/close_forgot_password"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/close_login"
        android:contentDescription="@string/close_forgot_password" />

    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/forgot_password_title"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/email"
        android:drawablePadding="5dp"
        android:hint="@string/enter_your_email_address"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <Button
        android:id="@+id/send_reset_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_bg"
        android:text="@string/send_reset_link"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn_backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/back_to_login"
        android:textColor="@color/lawn_green"
        android:textSize="20sp"
        android:textStyle="italic" />
</LinearLayout>