<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInformationActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/btn_backHome"
            android:layout_width="52dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:contentDescription="@string/doing"
            android:src="@drawable/back_home" />

        <TextView
            android:id="@+id/tv_titleInformation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtSetting"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ToLogOut"
            android:layout_width="107dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txtLogout"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/view_lineHeight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/layout_detail_i4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/frameAvatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@color/black"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/name_Information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/caraman_invisible"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <View
        android:id="@+id/view_split_Information"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/layout_name_i4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/i4_name" />

        <TextView
            android:id="@+id/txt_content_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="43dp"
            android:hint="@string/hint_mickey"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textColorHint="#757575"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_address_i4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/txt_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/address_i4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/i4_address" />

        <TextView
            android:id="@+id/txt_content_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="@string/hint_mickey"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="20sp"
            android:textColorHint="#757575" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_email_i4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/email_i4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/i4_email" />

        <TextView
            android:id="@+id/txt_content_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="20sp"
            android:hint="@string/hint_mickey"
            android:textColorHint="#757575" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_phone_i4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/phone_i4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/i4_phone" />

        <TextView
            android:id="@+id/txt_content_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="20sp"
            android:hint="@string/hint_mickey"
            android:textColorHint="#757575" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btn_i4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_edit_i4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input_lg"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"
            android:text="@string/edit_profile_i4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:drawableRightCompat="@drawable/edit" />

        <TextView
            android:id="@+id/btn_change_password_i4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_lg"
            android:drawablePadding="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="8dp"
            android:paddingRight="20dp"
            android:paddingBottom="8dp"
            android:text="@string/change_password_i4"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:drawableRightCompat="@drawable/change_password" />
    </LinearLayout>

</LinearLayout>